--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "harfbuzz"]
 	path = harfbuzz
 	url = https://github.com/harfbuzz/harfbuzz.git
+[submodule "libxslt"]
+	path = libxslt
+	url = https://gitlab.gnome.org/GNOME/libxslt.git
